--- a/Dream_Flights/Views/Flights/Index.cshtml
+++ b/Dream_Flights/Views/Flights/Index.cshtml
@@ -27,7 +27,7 @@
 
 </style>
 
-<div class="container d-flex justify-content-center align-items-center h-100">
+<div class="container d-flex justify-content-center align-items-center h-100" style="margin-top:5%">
     <div class="card border-0" style="width:1010px; height:540px;">
         <div class="card bg-dark"></div>
         <ul class="nav nav-tabs bg-dark text-light" id="myTab" role="tablist">
