--- a/Dream_Flights/Views/SignIn/Index.cshtml
+++ b/Dream_Flights/Views/SignIn/Index.cshtml
@@ -4,9 +4,9 @@
 
 <body background="Images\wallpaper_1.jpg" style="background-size: cover;">
 
-<div class="row justify-content-center">
+<div class="row justify-content-center" style="margin-top: 5%">
     <div class="col-md-4">
-        <div class="card" style=" margin-top:30px">
+        <div class="card" style=" margin-top:30px;">
             <header class="card-header bg-warning text-dark" style="text-align: center;">
                 <h3 class="card-title mt-2"><b>Sign up</b></h3>
             </header>
