--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -9,12 +9,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
-<body>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    <header>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <body >
+     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-warning" style="height:72px;">
             <div class="container-fluid">
-                    <p class="navbar-brand" asp-area="" asp-controller="Started" asp-action="Index" style="margin-left:-750px" ><h3><b>Dream Flights</b></h3><img src="~/Iconos/globo.png" style="width:45px; height:45px;margin-left:-820px" /></p>
+                    <p class="navbar-brand" asp-area="" asp-controller="Started" asp-action="Index" style="margin-left:-1470px" ><h3><b>Dream Flights</b></h3><img src="~/Iconos/globo.png" style="width:45px; height:45px;margin-left:-1550px" /></p>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                          aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -26,38 +26,36 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1 text-center">
                             <li class="nav-item">
-                                <a class="nav-link text-light" style="" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a>
+                                <a class="nav-link" style="color:white" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
+                            <li class="nav-item active">
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
                             </li>
                             <li id="Flights" hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a>
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a>
                             </li>
                             <li id="Airlines" hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a>
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a>
                             </li>
                             <li id="AdminUsers"hidden="hidden" class="nav-item">
-                                <a class="nav-link text-light" style="" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action=""><b>Contact us</b></a>
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
                             </li>
                              <li id="" class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
                             </li>
                             <li class="Logout">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Logout" style="float:left"><img src="~/Iconos/salida.png" style="width:30px; height:28px" /></a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logout" style="float:left"><img src="~/Iconos/salida.png" style="width:30px; height:28px" /></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
     </header>
-    <div class="container-fluid" style="width: 100%;height: 580px;padding-left: 0px;padding-right: 0px;">
+
+   <div class="container-fluid" style="width: 100%;height: 580px;padding-left: 0px;padding-right: 0px;">
         <main role="main" class="" style="width:100%;height:100%">
             @RenderBody()
         </main>
