--- a/Dream_Flights/Views/Login/Index.cshtml
+++ b/Dream_Flights/Views/Login/Index.cshtml
@@ -10,11 +10,11 @@
         <div class="card-body text-light bg-dark">
             <form asp-controller="Login" asp-action="LoginUser" method="post">
                 <div class="form">
-                    <input type="email" required class="form-control" name="email" placeholder="name@example.com" value="chris@gmail.com">
+                    <input type="email" required class="form-control" name="email" placeholder="name@example.com" value="steven@gmail.com">
                     <label for="floatingInput">Email address</label>
                 </div>
                 <div class="form">
-                    <input type="password" required class="form-control" name="password" placeholder="Password" value="123">
+                    <input type="password" required class="form-control" name="password" placeholder="Password" value="1234">
                     <label for="floatingPassword">Password</label>
                 </div>
                 <hr />
