--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </nav>
     </header>
-    <div class="container-fluid" style="width: 100%;height: 580px;padding-left: 0px;padding-right: 0px;">
+    <div class="container-fluid" style="width: 100%;height: 100%;padding-left: 0px;padding-right: 0px;">
         <main role="main" class="" style="width:100%;height:100%">
             @RenderBody()
         </main>
