--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -37,7 +37,10 @@
                             <li id="Airlines" hidden="hidden" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a>
                             </li>
-                            <li id="AdminUsers"hidden="hidden" class="nav-item">
+                             <li id="Countries" hidden="hidden" class="nav-item">
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Countries" asp-action="Index"><b>Countries Management</b></a>
+                            </li>
+                            <li id="AdminUsers" hidden="hidden" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
                             </li>
                              <li id="" class="nav-item">
