--- a/Dream_Flights/Views/BuyFlights/Index.cshtml
+++ b/Dream_Flights/Views/BuyFlights/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@*@Html.Partial("userAccess")*@
+@*@Html.Partial("userAccess")*@ @*Se cae si descomentamos esto*@
 
 <style>
 .table-fixed tbody{
