--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
                             <li id="AdminUsers" hidden="hidden" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
                             </li>
-                             <li id="" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
+                             <li id="BuyFlights"  hidden="hidden" class="nav-item">
+                                <a class="nav-link"style="color:white" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
