--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -28,7 +28,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" style="color:white" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a>
                             </li>
-                         
+                             <li class="nav-item">
+                                <a class="nav-link" style="color:white" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
+                            </li>
                             <li id="Flights" hidden="hidden" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a>
                             </li>
@@ -38,8 +40,11 @@
                             <li id="AdminUsers"hidden="hidden" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
                             </li>
-                             <li id="BuyFlights"  hidden="hidden" class="nav-item">
+                             <li id="BuyFlights" hidden="hidden" class="nav-item">
                                 <a class="nav-link"style="color:white" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
+                            </li>
+                             <li id="Countries" hidden="hidden" class="nav-item">
+                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Countries" asp-action="Index"><b>Countries Management</b></a>
                             </li>
                             <li id="profile" class="nav-item">
                                 <a class="nav-link"  style="color:white" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
