--- a/Dream_Flights/Views/Airlines/Edit.cshtml
+++ b/Dream_Flights/Views/Airlines/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@using System.Collections
+﻿@*@using System.Collections
 
 
 <body background="Images\wallpaper_1.jpg" style="background-size: cover;">
@@ -39,4 +39,4 @@
 
     </div>
 </div>
-</body>
+</body>*@
