--- a/Dream_Flights/Views/Flights/Index.cshtml
+++ b/Dream_Flights/Views/Flights/Index.cshtml
@@ -131,8 +131,7 @@
                                     <th style="width:197px" scope="col">Flight Number </th>
                                     <th style="width:110px" scope="col">Airline </th>
                                     <th style="width:110px" scope="col">Origen </th>
-                                    <th style="width:197px" scope="col">Date</th>
-                                    <th style="width:110px" scope="col">Time</th>
+                                    <th style="width:197px" scope="col">Date</th>  
                                     <th style="width:100px" scope="col">Door</th>
                                     <th style="width:125px" scope="col">Status</th>
                                 </tr>
@@ -144,8 +143,7 @@
                                     <td style="width:197px">@item.fli_number</td>
                                     <td style="width:110px">@item.air_name</td>
                                     <td style="width:110px">@item.place</td>
-                                    <td style="width:197px">@item.date</td>
-                                    <td style="width:110px">@item.time</td>
+                                    <td style="width:197px">@item.fulldate</td>
                                     <td style="width:100px">@item.door</td>
                                     <td style="width:125px">@item.description</td>
 
@@ -169,7 +167,6 @@
                                     <th style="width:110px" scope="col">Airline </th>
                                     <th style="width:120px" scope="col">Destination</th>
                                     <th style="width:197px" scope="col">Date</th>
-                                    <th style="width:110px" scope="col">Time</th>
                                     <th style="width:100px" scope="col">Door</th>
                                     <th style="width:125px" scope="col">Status</th>
                                 </tr>
@@ -181,11 +178,9 @@
                                     <td style="width:187px">@item.fli_number</td>
                                     <td style="width:110px">@item.air_name</td>
                                     <td style="width:120px">@item.place</td>
-                                    <td style="width:197px">@item.date</td>
-                                    <td style="width:110px">@item.time</td>
+                                    <td style="width:197px">@item.fulldate</td>
                                     <td style="width:100px">@item.door</td>
                                     <td style="width:125px">@item.description</td>
-
                                 </tr>
                             }
                             </tbody>
