--- a/Dream_Flights/Views/Shared/_Layout.cshtml
+++ b/Dream_Flights/Views/Shared/_Layout.cshtml
@@ -12,45 +12,45 @@
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <body >
      <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-warning" style="height:72px;">
-            <a class="navbar-brand" style="margin-left:10px" asp-area="" asp-controller="Started" asp-action="Index">
-                <img src="~/Iconos/globo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-                <b>Dream Flights</b>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-warning" style="height:90px;">
+            <a class="navbar-brand" style="margin-left:100px" asp-area="" asp-controller="Started" asp-action="Index">
+                <h2><b>Dream Flights</b></h2>
+                <a><img src="~/Iconos/globo.png" width="50px" height="50px" class="d-inline-block align-top" alt=""></a>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </nav>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark" style="height:auto">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark" style="height:50px">
                 <div class="container-fluid">
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1 text-center">
                             <li class="nav-item">
-                                <a class="nav-link" style="color:white" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a>
+                                <h5><a class="nav-link" style="color:white; margin-top:3px" asp-area="" asp-controller="Login" asp-action="Index"><b>Login</b></a></h5>
                             </li>
-                             <li class="nav-item">
+                            @* <li class="nav-item">
                                 <a class="nav-link" style="color:white" asp-area="" asp-controller="Started" asp-action="Index"><b>Home</b></a>
-                            </li>
+                            </li>*@
                             <li id="Flights" hidden="hidden" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a>
+                                 <h5><a class="nav-link"  style="color:white; margin-top:3px" asp-area="" asp-controller="Flights" asp-action="Index"><b>Flights Management</b></a></h5>
                             </li>
                             <li id="Airlines" hidden="hidden" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a>
+                                <h5><a class="nav-link"  style="color:white; margin-top:3px" asp-area="" asp-controller="Airlines" asp-action="Index"><b>Airlines Management</b></a></h5>
                             </li>
                             <li id="AdminUsers"hidden="hidden" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a>
+                                 <h5><a class="nav-link"  style="color:white; margin-top:3px" asp-area="" asp-controller="AdminUsers" asp-action="Index"><b>User Management</b></a></h5>
                             </li>
                              <li id="BuyFlights" hidden="hidden" class="nav-item">
-                                <a class="nav-link"style="color:white" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a>
+                                 <h5><a class="nav-link"style="color:white; margin-top:3px" asp-area="" asp-controller="BuyFlights" asp-action="Index"><b>Buy Flights</b></a></h5>
                             </li>
                              <li id="Countries" hidden="hidden" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Countries" asp-action="Index"><b>Countries Management</b></a>
+                                 <h5><a class="nav-link"  style="color:white; margin-top:3px" asp-area="" asp-controller="Countries" asp-action="Index"><b>Countries Management</b></a></h5>
                             </li>
                             <li id="profile" class="nav-item">
-                                <a class="nav-link"  style="color:white" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:30px; height:28px" /></a>
+                                 <h5><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index" style="float:left"><img src="~/Iconos/usuario1.png" style="width:37px; height:35px" /></a></h5>
                             </li>
                             <li id="logout"class="Logout">
-                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logout" style="float:left"><img src="~/Iconos/salida.png" style="width:30px; height:28px" /></a>
+                                <h5><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Logout" style="float:left"><img src="~/Iconos/salida.png" style="width:37px; height:35px" /></a></h5>
                             </li>
                         </ul>
                     </div>
